GUI-564 Fixed flickering table on skip to row

--- a/stylesheets/less/partials/worksheet.less
+++ b/stylesheets/less/partials/worksheet.less
@@ -341,7 +341,7 @@
      .xcTbodyWrap {
         margin-bottom: 0;
         padding: 0;
-        max-height: ~"calc(100% - 34px)";
+        max-height: ~"calc(100% - 31px)";
         font-size: 11px;
         right: -17px;
         overflow-x: hidden;
